[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/other/barrel.gd" type="Script" id=1]
[ext_resource path="res://scenes/other/shadow.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/textures/other/explosion.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/other/barrel.png" type="Texture" id=4]
[ext_resource path="res://scenes/other/light_caster.tscn" type="PackedScene" id=5]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "explosion",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "barrel",
"speed": 0.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26, 25 )

[sub_resource type="Animation" id=3]
resource_name = "explode"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-005, 1e-005 ), Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 235.053

[node name="barrel" type="KinematicBody2D" groups=[
"interacting",
]]
collision_layer = 31
collision_mask = 31
script = ExtResource( 1 )

[node name="shadow" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 48 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1e-005, 1e-005 )
frames = SubResource( 2 )
animation = "barrel"

[node name="light_caster" parent="Sprite" instance=ExtResource( 5 )]
visible = false
scale = Vector2( 2, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -16 )
shape = SubResource( 1 )

[node name="anims" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 3 )

[node name="damage_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage_area"]
shape = SubResource( 4 )
[connection signal="body_entered" from="damage_area" to="." method="_on_damage_area_body_entered"]
[connection signal="body_exited" from="damage_area" to="." method="_on_damage_area_body_exited"]
